--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,1 +1,23 @@
+
+
 <h2>Available drones</h2>
+
+{{#unless drones.length}}
+<p>
+    Sorry, no drones in database yet !
+</p>
+{{/unless}}
+
+<div id="drones-container">
+    {{#each drones}}
+    <div class="drones-row">
+        <p>Name : {{this.name}}</p>
+        <p>Propellers : {{this.propellers}}</p>
+        <p>Max speed : {{this.maxSpeed}}</p>
+        <a href="/drones/{{this._id}}/edit">Edit drone information</a> | <a href="/drones/{{this._id}}/delete">Delete this drone</a>
+    </div>
+    <hr>
+    {{/each}}
+</div>
+
+<a href="/drones/create">Add a new drone</a>
