--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,14 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
 
+  <nav>
+    <a href="/">Home</a>
+    <a href="/drones">Drones List</a>
+    <a href="/drones/create">Create a new Drone</a>
+  </nav>
+
   <body>
+  
 
     {{{body}}}
 
